--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "author": "bxu",
   "license": "ISC",
-  "browserslist": ">0.2%, not dead, ie >= 11, not op_mini all",
+  "browserslist": {},
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/eslint-parser": "^7.14.4",
