--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint --fix -c .eslintrc.js --ignore-path .eslintignore --ext .js src && stylelint --config .stylelintrc.js src/**/*.css",
     "start": "cross-env NODE_ENV=development node ./scripts/server.js",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js",
-    "s": "electron ./dist/app.js"
+    "s": "electron ./dist/app.js",
+    "d": "electron ./src/index.js"
   },
   "keywords": [
     "kintone"
